tests/ivg/invalid/ellipse_sweep_ivg1.ivg
format IVG-1
ELLIPSE 0,0,10 sweep:0,90 type:pie
